--- a/cardiac.html
+++ b/cardiac.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -60,7 +62,7 @@
         <h1 class="subpage-bannersection-title">Cardiac & Diabetic</h1>
     </div>
     <!--banner section end -->
-    
+
     <div class="container-fluid p-5">
         <div class="text-start vividu-orthopedic-header mb-4">
             <h2>CARDIAC & DIABETIC</h2>
@@ -104,9 +106,11 @@
             <!-- Sitaphil / Dapadus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Sitaphil</span> <span style="color: darkgoldenrod;">M 50/500 </span></h2>
+                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Sitaphil</span> <span
+                            style="color: darkgoldenrod;">M 50/500 </span></h2>
                     <p>Sitagliptin 50mg + Metformin 500mg tablets</p>
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Sitaphil</span> <span style="color: darkgoldenrod;">DM 100/10/500 </span></h2>
+                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Sitaphil</span> <span
+                            style="color: darkgoldenrod;">DM 100/10/500 </span></h2>
                     <p>Sitagliptin 100mg + Dapagliflozin 10mg + Metformin 500mg tablets</p>
                     <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Dapadus</span> 10 </h2>
                     <p>Dapagliflozin 10mg tablets</p>
