--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -55,7 +57,8 @@
     </header>
     <!-- header code end  -->
     <!-- banner section start -->
-    <div class="subpage-bannersection-main" style="background-image: linear-gradient(rgba(2, 48, 71, 0.6)), url('img/contact-banner.jpg');">
+    <div class="subpage-bannersection-main"
+        style="background-image: linear-gradient(rgba(2, 48, 71, 0.6)), url('img/contact-banner.jpg');">
         <h1 class="subpage-bannersection-title">Contact Us</h1>
     </div>
     <!--banner section end -->
