--- a/ent.html
+++ b/ent.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -78,7 +80,8 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: rgb(13, 134, 13);">Vigor</span>-OD</h2>
+                    <h2 class="ent-vividus-title text-center"><span style="color: rgb(13, 134, 13);">Vigor</span>-OD
+                    </h2>
                     <p class="text-center">Vitamin C 80mg Niacinamide 23mg + Vitamin B1 2.3mg Vitamin B2 3.2 mg +
                         Vitamin B6 3mg + Calcium Pantothenate 5mg Folic Acid 176.47mcg+ Vitamin B12 2.5mcg + Vitamin
                         A(As Palmitate) 15mcg + Sodium Carbonate 5mcg+ Chloride (As Manganse Chloride) 5mg </p>
@@ -87,7 +90,8 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"> <span style="color: darkgreen;">Cefponorm CV 200/125</span></h2>
+                    <h2 class="ent-vividus-title text-center"> <span style="color: darkgreen;">Cefponorm CV
+                            200/125</span></h2>
                     <p class="text-center">Cefpodoxime 200 mg + Clavulanate Acid<br> 125 mg Tablets</p>
                     <h2 class="ent-vividus-title text-center"><span style="color: darkgreen;">LEDUS</span> M</h2>
                     <p class="text-center">Levocetrizine Hydrochloride 5mg +<br> Montelukast 10 mg Tablets</p>
@@ -116,7 +120,7 @@
                 <div class="card p-3 ent-vividus-card">
                     <h2 class="ent-vividus-title text-center"><span style="color: darkgreen;">AB NORM</span>-100</h2>
                     <p class="text-center">Acebrophylline 100 mg Capsules</p>
-                                        <h2 class="ent-vividus-title text-center"><span style="color: darkgoldenrod;">D3 Max 60к</span></h2>
+                    <h2 class="ent-vividus-title text-center"><span style="color: darkgoldenrod;">D3 Max 60к</span></h2>
                     <p class="text-center">Cholecalciferol Mouth Dissolving Tablets 60000IU</p>
                 </div>
             </div>
