--- a/gynaecology.html
+++ b/gynaecology.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -126,18 +128,21 @@
             <div class="col-md-12 mb-4">
                 <div class="card p-3 ent-vividus-card">
                     <div class="d-flex justify-content-between">
-                    <div class="col-md-3">
-                        <h2 class="ent-vividus-title text-center">TRYPSEE</h2>
-                        <p class="text-center">Trypsin Chymotrypsin 100000 AU</p>
-                    </div>
-                    <div class="col-md-3">
-                        <h2 class="ent-vividus-title text-center">TRYPSEE <span style="color: darkblue;">PLUS</span></h2>
-                        <p class="text-center">Trypsin Chymotrypsin 150000 AU, Aceclofenac 100 mg, Paracetamol 325 mg</p>
-                    </div>
-                    <div class="col-md-3">
-                        <h2 class="ent-vividus-title text-center">TRYPSEE <span style="color: darkblue;">BR</span></h2>
-                        <p class="text-center">Trypsin 48 mg. Bromelain 90 mg, Rutaside 100 mg</p>
-                    </div>
+                        <div class="col-md-3">
+                            <h2 class="ent-vividus-title text-center">TRYPSEE</h2>
+                            <p class="text-center">Trypsin Chymotrypsin 100000 AU</p>
+                        </div>
+                        <div class="col-md-3">
+                            <h2 class="ent-vividus-title text-center">TRYPSEE <span style="color: darkblue;">PLUS</span>
+                            </h2>
+                            <p class="text-center">Trypsin Chymotrypsin 150000 AU, Aceclofenac 100 mg, Paracetamol 325
+                                mg</p>
+                        </div>
+                        <div class="col-md-3">
+                            <h2 class="ent-vividus-title text-center">TRYPSEE <span style="color: darkblue;">BR</span>
+                            </h2>
+                            <p class="text-center">Trypsin 48 mg. Bromelain 90 mg, Rutaside 100 mg</p>
+                        </div>
                     </div>
                 </div>
             </div>
