--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
 </head>
 
 <body>
