--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
-
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">VIVIDUS</a>
@@ -104,7 +104,7 @@
     <div class="container-fluid vividus-services-container px-5 py-5">
         <div class="text-center mb-5">
             <h6>What We Offer</h6>
-            <h2 class="vividus-services-titles1">Our Services</span></h2>
+            <h2 class="vividus-services-titles1">Our Products</span></h2>
         </div>
         <div class="row">
             <div class="col-md-3 col-sm-6 mb-4">
@@ -417,6 +417,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
 </body>
 
 </html>
