--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -103,9 +103,9 @@
                 <div class="col-lg-4 text-center">
                     <img src="img/contact-us.jpg" alt="Healthcare Team" class="contactus-page-img mb-3">
                     <div class="contactus-page-info">
-                        <p><strong>K.L.G St. No 203, Phy City, Zip 20239</strong></p>
-                        <p>+0123-4563-399</p>
-                        <p>help@domainsite.com</p>
+                        <p><strong>Vijayawada, Ramavarapadu</strong></p>
+                        <p>+91 9876543211</p>
+                        <p>vividus@gmail.com</p>
                     </div>
 
                     <div class="contactus-page-social">
@@ -177,6 +177,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
 </body>
 
 </html>
