--- a/orthopedic.html
+++ b/orthopedic.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="img/vividus-favicon.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
 </head>
 
@@ -206,7 +207,25 @@
 
 
 
-
+    <!-- our contact  section code start -->
+    <section class="vividus-contecthome-section text-white">
+        <div class="container-fluid px-5">
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
+                    <p class="vividus-contecthome-text">
+                        Our team is here to guide you, answer your questions, and support your wellness goals every step
+                        of the way. Start now!
+                    </p>
+                </div>
+                <div class="col-md-4 text-md-end text-center mt-3 mt-md-0">
+                    <a href="contact.html" class="btn vividus-contecthome-btn">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- our contact section code end -->
+     
     <!-- footer section code start  -->
     <footer class="vividus-footer-main py-4">
         <div class="container-fluid px-5">
@@ -265,6 +284,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
 </body>
 
 </html>
