--- a/cardiac.html
+++ b/cardiac.html
@@ -21,7 +21,9 @@
 
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
-            <a class="navbar-brand" href="#">VIVIDUS</a>
+            <a class="navbar-brand" href="#">
+            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,9 +48,9 @@
                             <a class="dropdown-item" href="gynaecology.html">Gynaecology</a>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#doctors">Careers</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
@@ -232,7 +234,7 @@
         <div class="container-fluid px-5">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
-                    <img src="img/logo.png" alt="MedEase" class="mb-2" style="max-width: 120px;">
+                    <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
                 </div>
                 <div class="col-md-6 mb-3 mb-md-0">
                     <form class="form-inline justify-content-end">
