--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,9 @@
 
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">VIVIDUS</a>
+            <a class="navbar-brand" href="#">
+            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,9 +47,9 @@
                             <a class="dropdown-item" href="gynaecology.html">Gynaecology</a>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#doctors">Careers</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
@@ -57,10 +59,11 @@
     </header>
     <!-- header code end  -->
     <!-- banner section start -->
-    <div class="subpage-bannersection-main"
-        style="background-image: linear-gradient(rgba(2, 48, 71, 0.6)), url('img/contact-banner.jpg');">
-        <h1 class="subpage-bannersection-title">Contact Us</h1>
-    </div>
+<div class="subpage-bannersection-main"
+    style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(2, 48, 71, 0.6)), url('img/contact-banner.jpg');">
+    <h1 class="subpage-bannersection-title">Contact Us</h1>
+</div>
+
     <!--banner section end -->
 
 
@@ -124,7 +127,7 @@
         <div class="container-fluid px-5">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
-                    <img src="img/logo.png" alt="MedEase" class="mb-2" style="max-width: 120px;">
+                    <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
                 </div>
                 <div class="col-md-6 mb-3 mb-md-0">
                     <form class="form-inline justify-content-end">
