--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 
 <body>
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">VIVIDUS</a>
+        <div class="container-fluid px-0">
+            <a class="navbar-brand" href="index.html">
+            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> 
             <div class="collapse navbar-collapse vividus-header-nav" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -44,9 +46,9 @@
                             <a class="dropdown-item" href="gynaecology.html">Gynaecology</a>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#doctors">Careers</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
@@ -67,31 +69,31 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="slide-bg"
-                        style="background-image: linear-gradient(rgba(0, 123, 255, 0.5), rgba(0, 123, 255, 0.5)), url('img/Slider-1.jpg');">
+                        style="background-image: linear-gradient(rgba(255, 193, 7, 0.5), rgba(255, 193, 7, 0.5)), url('img/Slider-1.jpg');">
                         <div class="carousel-caption">
                             <h1>WE PROVIDE BEST <br> HEALTHCARE</h1>
                             <p>Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic?</p>
-                            <a href="#about" class="btn btn-primary">Read More</a>
+                            <a href="#" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="slide-bg"
-                        style="background-image: linear-gradient(rgba(40, 167, 69, 0.5), rgba(40, 167, 69, 0.5)), url('img/Slider-2.jpg');">
+                        style="background-image: linear-gradient(rgba(40, 167, 69, 0.5), rgba(40, 167, 69, 0.5)), url('img/Slider-3.jpg');">
                         <div class="carousel-caption">
                             <h1>ADVANCED <br> CARDIOLOGY</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit.</p>
-                            <a href="#cardiology" class="btn btn-primary">Explore</a>
+                            <a href="cardiac.html" class="btn btn-primary">Explore</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="slide-bg"
-                        style="background-image: linear-gradient(rgba(255, 193, 7, 0.5), rgba(255, 193, 7, 0.5)), url('img/Slider-3.jpg');">
+                        style="background-image: linear-gradient(to bottom right, rgba(255, 182, 193, 0.6), rgba(255, 105, 180, 0.6)), url('img/Slider-2.webp');">
                         <div class="carousel-caption">
-                            <h1>EXPERT <br> ORTHOPEDICS</h1>
+                            <h1>EXPERT <br>INFERTILITY</h1>
                             <p>Magni, aliquid sit. Molestiae quas vel sint commodi repudiandae consequuntur.</p>
-                            <a href="#orthopedics" class="btn btn-primary">Discover</a>
+                            <a href="gynaecology.html" class="btn btn-primary">Discover</a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +112,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-heartbeat"></i>
+                        <img class="vividus-product-icons" src="img/Cardiac-icon.png" alt="Cardiac-icon"> 
                     </div>
                     <h5>Cardiac</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -120,7 +122,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-tint"></i>
+                        <img class="vividus-product-icons" src="img/Diabetic-icon.png" alt="Diabetic-icon"> 
                     </div>
                     <h5>Diabetic</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -130,7 +132,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-bone"></i>
+                        <img class="vividus-product-icons" src="img/orthopedics-icon.png" alt="Orthopedics-icon"> 
                     </div>
                     <h5>Orthopedics</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -140,7 +142,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-tooth"></i>
+                        <img class="vividus-product-icons" src="img/ent-icon.png" alt="ENT-icon"> 
                     </div>
                     <h5>ENT</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -150,7 +152,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-venus-mars"></i>
+                        <img class="vividus-product-icons" src="img/urology-icon.png" alt="Urology-icon"> 
                     </div>
 
                     <h5>Urology</h5>
@@ -161,10 +163,10 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-procedures"></i>
+                        <img class="vividus-product-icons" src="img/general-icon.png" alt="General-icon"> 
                     </div>
 
-                    <h5>General </h5>
+                    <h5>General</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="urology.html" class="vividus-services-btn">Learn More →</a>
                 </div>
@@ -172,7 +174,7 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-venus"></i>
+                        <img class="vividus-product-icons" src="img/Gynaecology-icon.png" alt="Gynaecology-icon"> 
                     </div>
                     <h5>Gynaecology</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -182,12 +184,12 @@
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="vividus-services-card">
                     <div class="vividus-services-icon">
-                        <i class="fas fa-user-md"></i>
+                        <img class="vividus-product-icons" src="img/infertility-icon.png" alt="Infertility-icon"> 
                     </div>
 
-                    <h5>Physician</h5>
+                    <h5>Infertility</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="ent.html" class="vividus-services-btn">Learn More →</a>
+                    <a href="gynaecology.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
         </div>
@@ -228,7 +230,7 @@
                             </p>
                         </div>
                     </div>
-                    <a href="about.html"><button class="vividus-aboutus-button">
+                    <a href="about.html" class="a-line"><button class="vividus-aboutus-button">
                             Learn More
                         </button></a>
                 </div>
@@ -364,7 +366,7 @@
         <div class="container-fluid px-5">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
-                    <img src="img/logo.png" alt="MedEase" class="mb-2" style="max-width: 120px;">
+                    <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
                 </div>
                 <div class="col-md-6 mb-3 mb-md-0">
                     <form class="form-inline justify-content-end">
